# RecoServiceMTC

./: .editorconfig  .gitignore  .pylintrc  Makefile  load_models_from_gdrive.sh  pyproject.toml  setup.cfg
models/ae/: VariationalAE_dims.pickle  item_to_ind
models/dssm/: tdssm_user_recs.dill
notebooks/: TDSSM.ipynb
notebooks/Sem_2/: hw_1_AEs_Neptune.ipynb
reports/: README.md
reports/Experiment_tracking/: Hyperparams.csv
service/: configuration.py  response.py  settings.py
service/api/: app.py  exception_handlers.py  exceptions.py  explanation_response.py  reco_response.py  responses.py  views.py
service/reco_models/: __init__.py  autoencoders.py  dssm.py  knn.py  lightfm.py  popular.py
tests/api/: test_views.py
